force-app/main/default/objects/PF_Product__c/PF_Product__c.object-meta.xml
<CustomObject>
    <description>This is where products will be captured within the ProjectForce application.</description>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>