force-app/main/default/objects/PF_Product__c/fields/PF_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>PF_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify the business user who is responsible for this product.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>