force-app/main/default/objects/PF_Product__c/fields/PF_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Product_Description__c</fullName>
    <inlineHelpText>This is the auto-generated identifier.</inlineHelpText>
    <label>Product Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>