force-app/main/default/objects/PF_Product__c/fields/PF_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_Product_Number__c</fullName>
    <displayFormat>PN-{00000}</displayFormat>
    <inlineHelpText>Provide a brief description of the product.</inlineHelpText>
    <label>Product Number</label>
    <type>AutoNumber</type>
</CustomField>